# rag_project

./: .dockerignore  .gitignore  Dockerfile  README.md  README_Docker.md  README_streamlit.md  build_docker.sh  demo.py  docker-compose.yml  main.py  poetry.toml  pyproject.toml  requirements.txt  requirements_streamlit.txt  run_streamlit.sh  sample_data.json  streamlit_app.py
rag_project/: cli.py  qa_system.py
src/rag_project/: __init__.py  cli.py  qa_system.py
src/rag_project/utils/: __init__.py  data_loader.py  gpu_utils.py  text_processing.py  validation.py
tests/: conftest.py  test_gpu_utils.py  test_qa_system.py  test_utils.py
