[project]
name = "rag-project"
version = "0.2.0"
description = "A simple question-answering system using T5 and sentence transformers for RAG (Retrieval-Augmented Generation)"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "fg12@sanger.ac.uk"}
]
homepage = "https://github.com/yourusername/rag_project"
repository = "https://github.com/yourusername/rag_project.git"
keywords = ["rag", "question-answering", "nlp", "transformers", "t5", "sentence-transformers"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
requires-python = "==3.11.6"
dependencies = [
    "aiohappyeyeballs==2.4.3",
    "aiohttp==3.10.10",
    "aiosignal==1.3.1",
    "attrs==24.2.0",
    "certifi==2024.8.30",
    "charset-normalizer==3.4.0",
    "datasets==3.1.0",
    "dill==0.3.8",
    "faiss-cpu==1.9.0",
    "filelock==3.16.1",
    "frozenlist==1.5.0",
    "fsspec==2024.9.0",
    "huggingface-hub==0.26.2",
    "idna==3.10",
    "Jinja2==3.1.4",
    "joblib==1.4.2",
    "MarkupSafe==3.0.2",
    "mpmath==1.3.0",
    "multidict==6.1.0",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.0.0",
    "propcache==0.2.0",
    "protobuf==5.28.3",
    "pyarrow==18.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "PyYAML==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "safetensors==0.4.5",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "sentence-transformers==3.2.1",
    "sentencepiece==0.2.0",
    "setuptools==75.3.0",
    "six==1.16.0",
    "sympy==1.13.1",
    "threadpoolctl==3.5.0",
    "tokenizers==0.20.3",
    "torch==2.5.1",
    "tqdm==4.67.0",
    "transformers==4.46.2",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.2.3",
    "xxhash==3.5.0",
    "yarl==1.17.1",
    "streamlit>=1.46.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
rag-qa = "rag_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "--strict-markers",
  "--strict-config",
  "--cov=rag_project",
  "--cov-report=term-missing",
  "--cov-report=html",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.mypy.overrides]
module = [
  "torch.*",
  "transformers.*",
  "sentence_transformers.*",
  "sklearn.*",
  "numpy.*",
  "pandas.*",
]
ignore_missing_imports = true
